# rtgp-fluid-simulation

./: .gitignore  CMakeLists.txt  README.md  flake.nix  performance_data.csv
doc/kernel_visualization/: kernel_visualization.ipynb
doc/performance_analysis/: performance_analysis.ipynb
doc/performance_analysis/data/: brute_force_eight_threads_1000_particles.csv  brute_force_eight_threads_1728_particles.csv  brute_force_eight_threads_216_particles.csv  brute_force_eight_threads_4096_particles.csv  brute_force_eight_threads_512_particles.csv  brute_force_one_thread_1000_particles.csv  brute_force_one_thread_1728_particles.csv  brute_force_one_thread_216_particles.csv  brute_force_one_thread_4096_particles.csv  brute_force_one_thread_512_particles.csv  spatial_grid_eight_threads_1000_particles.csv  spatial_grid_eight_threads_1728_particles.csv  spatial_grid_eight_threads_1728_particles_mc_size_0_01.csv  spatial_grid_eight_threads_1728_particles_mc_size_0_02.csv  spatial_grid_eight_threads_1728_particles_mc_size_0_06.csv  spatial_grid_eight_threads_1728_particles_mc_size_0_1.csv  spatial_grid_eight_threads_1728_particles_mc_size_0_2.csv  spatial_grid_eight_threads_1728_particles_mc_size_0_3.csv  spatial_grid_eight_threads_216_particles.csv  spatial_grid_eight_threads_4096_particles.csv  spatial_grid_eight_threads_512_particles.csv  spatial_grid_one_thread_1000_particles.csv  spatial_grid_one_thread_1728_particles.csv  spatial_grid_one_thread_216_particles.csv  spatial_grid_one_thread_4096_particles.csv  spatial_grid_one_thread_512_particles.csv
doc/uml_visualization/: README.md  class_diagram.puml
models/: scene_config.json
shaders/: 00_basic.frag  00_basic.vert  cuboid.frag  marching_cube.frag  marching_cube.geom  marching_cube.vert  marching_cube_grid.frag  marching_cube_grid.geom  marching_cube_grid.vert  particle copy.geom  particle.frag  particle.geom  particle.vert
src/: README.md  application.cpp  application.h  main.cpp
src/application_handler/: application_handler.cpp  application_handler.h
src/input_handler/: input.cpp  input.h  input_context.cpp  input_context.h  input_handler.cpp  input_handler.h
src/scene_handler/: scene_handler.cpp  scene_handler.h  scene_information.cpp  scene_information.h
src/simulation_handler/: simulation_handler.cpp  simulation_handler.h
src/utils/: README.md  cuboid.cpp  cuboid.h  debug.h  helper.cpp  helper.h  index_buffer.cpp  particle.cpp  particle.h  particle_system.cpp  particle_system.h  performance_test.h  shader.cpp  typedef.cpp  typedef.h  vertex_array.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/visualization_handler/: camera.cpp  camera.h  index_buffer.cpp  index_buffer.h  marching_cubes.cpp  marching_cubes.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer_layout.h  visualization_handler.cpp  visualization_handler.h
